--- a/LearningPlusWebApp/appsettings.json
+++ b/LearningPlusWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LearningPlusWebApp-C7D1CA92-B41D-4A2C-BCE7-5DE2F1BF2671;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=LearningPlusWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
