--- a/LearningPlusWebApp/appsettings.json
+++ b/LearningPlusWebApp/appsettings.json
@@ -7,5 +7,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Email": {
+    "Server": "smtp.office365.com",
+    "Sender": "gyankov@students.softuni.bg",
+    "Password": "SoftUni101040"
+  }
 }
