Catching up with the local repository

--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,7 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 
+# ASP.NET Core appsettings
+appsettings.json
+appsettings.production.json
+appsettings.development.json
