Login implemented, administrator area added and role control for administrators introduced.

--- a/LearningPlusWebApp/LearningPlusWebApp.csproj
+++ b/LearningPlusWebApp/LearningPlusWebApp.csproj
@@ -13,7 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Administrator\Data\" />
     <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Home\IndexLoggedIn.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
