Teacher's area crated and user approval feature implemented.

--- a/LearningPlusWebApp/LearningPlusWebApp.csproj
+++ b/LearningPlusWebApp/LearningPlusWebApp.csproj
@@ -14,10 +14,20 @@
 
   <ItemGroup>
     <Folder Include="Areas\Administrator\Data\" />
+    <Folder Include="Areas\Teacher\Data\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Areas\Teacher\Views\Users\UserApprovals.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Teacher\Views\_ViewImports.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Areas\Teacher\Views\_ViewStart.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Home\IndexLoggedIn.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
