--- a/LearningPlusWebApp/Properties/launchSettings.json
+++ b/LearningPlusWebApp/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "LearningPlusWebApp": {
+    "LearningPlus.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
