Models project accommodated in the Data folder

--- a/src/Data/LearningPlus.Data/LearningPlus.Data.csproj
+++ b/src/Data/LearningPlus.Data/LearningPlus.Data.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\LearningPlus.Models\LearningPlus.Models.csproj" />
+    <ProjectReference Include="..\LearningPlus.Models\LearningPlus.Models.csproj" />
   </ItemGroup>
 
 
