--- a/src/Web/LerningPlus.Web.Services/LerningPlus.Web.Services.csproj
+++ b/src/Web/LerningPlus.Web.Services/LerningPlus.Web.Services.csproj
@@ -8,12 +8,17 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\LearningPlus.Data\LearningPlus.Data.csproj" />
     <ProjectReference Include="..\..\Data\LearningPlus.Models\LearningPlus.Models.csproj" />
     <ProjectReference Include="..\..\LearningPlus.Web.ViewModels\LearningPlus.Web.ViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="BlobService\Contract\" />
   </ItemGroup>
 
 </Project>
