--- a/src/LearningPlus.Web.ViewModels/LearningPlus.Web.ViewModels.csproj
+++ b/src/LearningPlus.Web.ViewModels/LearningPlus.Web.ViewModels.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\LearningPlus.Models\LearningPlus.Models.csproj" />
+  </ItemGroup>
+
 </Project>
