--- a/src/Tests/LearningPlus.Web.DataServices.Tests/LearningPlus.Web.DataServices.Tests.csproj
+++ b/src/Tests/LearningPlus.Web.DataServices.Tests/LearningPlus.Web.DataServices.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Data\LearningPlus.Models\LearningPlus.Models.csproj" />
     <ProjectReference Include="..\..\Web\LerningPlus.Web.Services\LerningPlus.Web.Services.csproj" />
   </ItemGroup>
 
