--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,6 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: cd src/Web/LearningPlusWebApp/LearningPlus.Web.csproj
+- script: cd src/Web/LearningPlusWebApp
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
